add data kinerja opd
